Made the website

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,51 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@import "tailwindcss";
+
+@font-face {
+  font-family: "Satoshi-Black";
+  src: url("/assets/Satoshi-Black.otf") format("otf");
+}
+
+@font-face {
+  font-family: "Amulya-Bold";
+  src: url("/assets/Amulya-Bold.otf") format("otf");
+}
+
+@font-face {
+  font-family: "Synonym-Regular";
+  src: url("/assets/Synonym-Regular.otf") format("otf");
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-style: normal;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.font-satoshi-black {
+  font-family: "Satoshi-Black", sans-serif;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.font-amulya-bold {
+  font-family: "Amulya-Bold", sans-serif;
+}
+.moving-background {
+  background: linear-gradient(
+      to right,
+      #6CA6A0 20%,
+      #B4D8D5 30%,
+      #DBEFED 70%,
+      #ECDDC8 80%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 10s ease-in-out infinite alternate;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@keyframes textShine {
+  0% {
+      background-position: 0% 50%;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  100% {
+      background-position: 100% 50%;
   }
 }
+
